admission/ValidatingAdmissionPolicy/policies/nodeport/deny.yaml
apiVersion: v1
kind: Service
metadata:
  name: violating-nodeport
  annotations:
    kubeapt.io/uuid: "3c5f4471-4c69-4659-8fe0-f4a7a5036ab3"
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
